--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "express": "^4.17.1",
     "file-loader": "^5.1.0",
     "react": "^16.10.2",
+    "react-dnd": "^15.1.2",
+    "react-dnd-html5-backend": "^15.1.3",
     "react-dom": "^16.10.2",
+    "react-modal": "^3.14.4",
     "react-router-dom": "^5.1.2"
   },
   "devDependencies": {
